[package]
name = "linkedvector-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "linkedvector"
path = "src/lib.rs"
test = true
doctest = false
bench = false
doc = false
crate-type = ["lib"]

[[bin]]
name = "bench"
path = "src/bench.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]
