[package]
name = "linkedvector-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "linkedvector"
path = "src/lib.rs"
test = true
doctest = false
bench = false
doc = false
crate-type = ["lib"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
